<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DSU to SQL Parser</string>
    <string name="action_settings">Settings</string>
    <!--For request screen-->
    <string name="user_id">Enter User ID</string>
    <string name="make_request_button">Make Request!</string>
    <string name="device_type_header">Device Type</string>
    <string name="measure_type_header">Measurement Type</string>
    <string name="username_header">Username</string>
    <string name="measure_header">Measurement</string>
    <string name="analysis_header">Analysis</string>

    <string-array name="device_array">
        <item>Test</item>
        <item>Fitbit</item>
        <item>Fat Secret</item>
        <item>Microsoft HealthVault</item>
        <item>Jawbone UP</item>
        <item>RunKeeper</item>
        <item>Withings</item>
    </string-array>


    <string-array name="device_array2">
        <item>All Devices</item>
        <item>Test</item>
        <item>Fitbit</item>
        <item>Fat Secret</item>
        <item>Microsoft HealthVault</item>
        <item>Jawbone UP</item>
        <item>RunKeeper</item>
        <item>Withings</item>
    </string-array>


    <!--For main screen-->
    <string name="view_button">View Database</string>
    <string name="import_button">Import DSUs</string>
    <string name="export_button">Export Database</string>
    <string name="visualize_button">Create Visualizations</string>
    <string name="destroy_button">Destroy Database</string>
    <!--For view screen-->
    <string name="table_name_header">Database Tables</string>
    <string name="view_table_button">View Table!</string>
    <!--For visualize screen-->
    <string name="visualization_header">Visualizations</string>
    <string name="make_visualization_button">Generate!</string>
    <string-array name="visualizations_array">
        <item>Line</item>
        <item>Bar</item>
    </string-array>


    <string name="start_date">Select Start Date</string>
    <string name="end_date">Select End Date</string>
</resources>
