<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical" >

    <TextView
        android:lines="2"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_type_header"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/device_type_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:lines="2"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_header"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/user_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_id"/>

    <TextView
        android:lines="2"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <Button
        android:id="@+id/make_request_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/make_request_button"/>

</LinearLayout>
